# chefusion-mini

./: .gitignore  README.md
chefusion-mini-claude/fusion_cuisine_poc/: Dockerfile  Makefile  README.md  config.yaml  confirm_recipes.py  docker-compose.yml  export_recipes.py  pyproject.toml  recipe_stats.py  results_config.yaml  validate_recipes.py
chefusion-mini-claude/fusion_cuisine_poc/app/: __init__.py  config.py  utils.py
chefusion-mini-claude/fusion_cuisine_poc/app/data/: cuisine_encoder.pkl  data_summary.json  flavor_graph.json  graph_data.pt  idx_to_ingredient.json  ingredient_embeddings.npy  ingredient_to_idx.json  preprocessing_metadata.json  ratings.csv  recipe_ingredient_matrix.npy  recipes.csv  test.csv  train.csv  val.csv
chefusion-mini-claude/fusion_cuisine_poc/app/notebooks/: fusion_cuisine_project.ipynb  run_demo.ipynb
chefusion-mini-claude/fusion_cuisine_poc/configs/: production.yaml  quick_prototype.yaml  research.yaml  resource_constrained.yaml  stable_training.yaml
chefusion-mini-claude/fusion_cuisine_poc/docs/: CONFIGURATION_GUIDE.md  CONFIGURATION_TOOLS_USAGE.md  IMAGE_WARNING_SOLUTION.md  PARAMETER_TUNING_GUIDE.md
chefusion-mini-claude/fusion_cuisine_poc/scripts/: 01_fetch_data.py  02_preprocess.py  compare_configs.py  demo_log_monitoring.py  estimate_resources.py  evaluate.py  fix_image_warnings.py  generate_fusion.py  monitor_logs.py  quick_results.py  recipe_explorer.py  show_results.py  train_encoder.py  train_palatenet.py  validate_config.py
chefusion-mini-claude/fusion_cuisine_poc/scripts/.ipynb_checkpoints/: 01_fetch_data-checkpoint.py  train_encoder-checkpoint.py
chefusion-mini-claude/fusion_cuisine_poc/tests/: __init__.py  test_pipeline.py
chefusion-mini-gemini/fusion_cuisine_poc/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
chefusion-mini-gemini/fusion_cuisine_poc/data/: flavorgraph.edgelist  ingredient_map.json  ratings.json  ratings_processed.jsonl  recipes.json  recipes_processed.jsonl
chefusion-mini-gemini/fusion_cuisine_poc/models/: text_encoder.pt
chefusion-mini-gemini/fusion_cuisine_poc/scripts/: 01_fetch_data.py  02_preprocess.py  evaluate.py  generate_fusion.py  train_encoder.py  train_palatenet.py
chefusion-mini-gemini/fusion_cuisine_poc/tests/: test_scripts.py
