[tool.poetry]
name = "fusion-cuisine-poc"
version = "0.1.0"
description = "Multicultural Fusion Cuisine Generator & Palate Predictor"
authors = ["Gemini"]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
transformers = "^4.30.2"
diffusers = "^0.18.2"
accelerate = "^0.21.0"
scikit-learn = "^1.3.0"
requests = "^2.31.0"
Pillow = "^9.5.0"
tqdm = "^4.65.0"
numpy = "^1.24.3"
scipy = "^1.11.1"
networkx = "^3.1"
jsonlines = "^3.1.0"
pandas = "^2.0.0"
torch-geometric = { version = "^2.5.3", extras = ["cpu"] }
torch-scatter = { version = "^2.1.2", extras = ["cpu"] }
torch-sparse = { version = "^0.6.18", extras = ["cpu"] }

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
